--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -34,6 +34,7 @@ basicCN + geom_boxplot()
 ```{r}
 basicCN + geom_boxplot(notch=TRUE,outlier.color = "red") + stat_boxplot(geom ='errorbar') + labs(title="Fancy notch boxplot \n with 2 lines")
 ```
+  
 The box for the back rows are much larger than the front and the middle seats.The red dots th outlers are shown above each box. The differnce in the sizes will be ran with the series of t.test's two at a time to show the significance. 
 ## Numerical Summarys 
 ```{r}
@@ -58,6 +59,6 @@ plot(TukeyHSD(model1),las=2)
 A mutiple comparison test showcases a subtantal difference or a lack of using each pair of data. the comparison of the middle row and the front had little to no differnce to each other. This is shown by the (a) broken line, this bracket is placed where this broken line is and explain there is no difference in data. The middle and back seats are on the right portion of the graph and show a negative result, based on the bottom line, placing it at approximately -11.The front and the back portion of the graph are compared and showed the most significant change in numberial data. The bracket is in the negative numbers, at around -13. this inference explains the most drinking was done in the back row. 
 
 ## Conclusions
-
+To discuss these results, we ran a series of tests and compared the results. Through a mutiple comparison test, we were able to display the number difference and that a large portion of the dat agreed that the back row. had the most  instances of drinking compared to the front and middle seats. The catergorical data was organized in numberial summeries 
 
 
